UI improvements: padding, margins, text alignment fixes

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,8 @@ body {
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
 }
-.bt{
+
+.bt {
   margin-bottom: 50px;
 }
 
@@ -53,53 +54,60 @@ body {
 .cen {
   text-align: center;
 }
-.padd{
+
+.padd {
   padding: 20px;
 }
-.cons{
+
+.cons {
   padding-top: 70px;
   padding-bottom: 40px;
 }
-.bad{
+
+.bad {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 20px;
 }
 
-.flex{
+.flex {
   padding: 15px;
 }
-.c1{
-  display: flex;
-  align-items: center;
-  justify-content: center;  
-}
-.c2{
-  margin-bottom: 30px;
-}
-.c3{
-  margin-bottom: 50px;
- 
 
-}
-.c4{
-  
+.c1 {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.gr{
+.c2 {
+  margin-bottom: 30px;
+}
+
+.c3 {
+  margin-bottom: 50px;
+
+
+}
+
+.c4 {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.gr {
   height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.bbt{
+.bbt {
   width: 150px;
- 
+
 }
 
 /* Background gradient effect */
@@ -183,56 +191,75 @@ body::before {
     background-position: 200% 0;
   }
 }
-.va{
+
+.va {
   padding: 10px;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
-.za{
+
+.za {
   height: 30px;
   padding: 5px;
   margin-bottom: 20px;
-  
+
 }
-.height-w{
-  height: 130px;
-  padding: 10px;
+
+.height-w {
+  height: auto;
+  min-height: 130px;
+  padding: 15px;
 }
-.text1{
+
+@media (min-width: 640px) {
+  .height-w {
+    height: 130px;
+    padding: 10px;
+  }
+}
+
+.text1 {
   display: flex;
   align-items: center;
   justify-content: center;
   padding-top: 20px;
 }
-.bs{
+
+.bs {
   padding-bottom: 50px;
 }
-.bt{
+
+.bt {
   padding-top: 100px;
 }
-.st{
+
+.st {
   margin-bottom: 20px;
- 
+
 }
 
-.bb{
+.bb {
   padding-top: 50px;
 }
-.md{
-  
+
+.md {
+
   margin-left: 15px;
 }
-.pad{
+
+.pad {
   padding: 10px;
 }
-.wd{
+
+.wd {
   width: 150px;
 }
 
-.cl{
+.cl {
   padding-top: 100px;
   padding-bottom: 40px;
 }
+
 .animate-fadeInUp {
   animation: fadeInUp 0.6s ease-out both;
 }
